scrollbar FF fix

--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,8 @@
         overflow: scroll;
         list-style-type: none;
         margin-top: 10px;
+        scrollbar-width: none;
+
     }
 
     .menu-list::-webkit-scrollbar {
@@ -370,6 +372,7 @@
 
     .menu-list {
         margin-left: 10px;
+        scrollbar-width: none;
     }
 
     .main-footer {
